--- a/PinSpot/app/src/main/res/layout/fragment_forgot_password.xml
+++ b/PinSpot/app/src/main/res/layout/fragment_forgot_password.xml
@@ -63,6 +63,20 @@
                 android:textSize="18sp"
                 app:cornerRadius="20dp" />
 
+            <Button
+                style="@style/TextBlack"
+                android:id="@+id/button_back_to_login"
+                android:layout_width="262dp"
+                android:layout_height="57dp"
+                android:background="?android:attr/selectableItemBackground"
+                android:inputType="textCapSentences"
+                android:text="@string/cancel_operation"
+                android:layout_gravity="center"
+                app:layout_constraintBaseline_toBaselineOf="@+id/textView4"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="0.5"
+                app:layout_constraintStart_toEndOf="@+id/textView4" />
+
         </LinearLayout>
 
     </androidx.cardview.widget.CardView>
