--- a/PinSpot/app/src/main/res/layout/fragment_settings.xml
+++ b/PinSpot/app/src/main/res/layout/fragment_settings.xml
@@ -105,17 +105,15 @@
                     tools:layout_editor_absoluteX="0dp" />
 
                 <TextView
-                    android:layout_width="29dp"
+                    android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:layout_marginStart="16dp"
+                    android:layout_marginTop="24dp"
                     android:text="@string/celsius"
                     android:textSize="20sp"
                     android:textStyle="bold"
-                    app:layout_constraintBottom_toBottomOf="parent"
-                    app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintHorizontal_bias="0.245"
                     app:layout_constraintStart_toEndOf="@+id/switchDegree"
-                    app:layout_constraintTop_toTopOf="parent"
-                    app:layout_constraintVertical_bias="0.509" />
+                    app:layout_constraintTop_toTopOf="parent" />
 
             </androidx.constraintlayout.widget.ConstraintLayout>
 
@@ -131,7 +129,7 @@
                     android:layout_height="wrap_content"
                     android:gravity="center"
                     android:minHeight="80dp"
-                    android:text="@string/research_radius"
+                    android:text="@string/pinspot_version"
                     android:textSize="20sp"
                     android:textStyle="bold"
                     app:layout_constraintEnd_toEndOf="parent"
