--- a/PinSpot/app/src/main/res/layout/fav_pin_list_item.xml
+++ b/PinSpot/app/src/main/res/layout/fav_pin_list_item.xml
@@ -1,27 +1,27 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    xmlns:tools="http://schemas.android.com/tools">
+    android:layout_height="wrap_content">
 
     <TextView
-        style="@style/ButtonDark"
         android:id="@+id/textview_fav_pin_title"
-        android:layout_width="240dp"
+        style="@style/ButtonDark"
+        android:layout_width="0dp"
         android:layout_height="28dp"
-        android:layout_marginLeft="10dp"
-        android:layout_marginTop="32dp"
-        android:layout_marginRight="10dp"
-        android:background="@drawable/edit_text_bg"
+        android:layout_marginStart="8dp"
 
+        android:layout_marginTop="32dp"
+        android:layout_marginEnd="16dp"
+        android:background="@drawable/edit_text_bg"
         android:gravity="center"
         android:textAppearance="?attr/textAppearanceTitleMedium"
         android:textColor="@color/white"
         android:textStyle="bold"
         app:layout_constraintEnd_toStartOf="@+id/imageview_favorite_pin"
         app:layout_constraintHorizontal_bias="1.0"
-        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/imageView_PinPreviewImage"
         app:layout_constraintTop_toTopOf="parent"
         tools:text="Pin title" />
 
@@ -31,10 +31,10 @@
         android:layout_height="50dp"
         android:layout_margin="4dp"
         android:background="@drawable/circle"
+        android:contentDescription="@string/remove_the_pin_the_favorite_list"
         android:focusable="true"
         android:padding="0.5dp"
         android:scaleType="centerCrop"
-        android:contentDescription="@string/remove_the_pin_the_favorite_list"
         android:src="@drawable/fav_pin_starred_foreground"
 
         app:layout_constraintBottom_toBottomOf="parent"
@@ -46,11 +46,11 @@
         android:id="@+id/imageView_PinPreviewImage"
         android:layout_width="80dp"
         android:layout_height="76dp"
+        android:layout_margin="10dp"
         android:layout_marginStart="16dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@drawable/ic_launcher_background"
-        android:layout_margin="10dp"/>
+        app:srcCompat="@drawable/ic_launcher_background" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
