--- a/PinSpot/app/src/main/res/layout/fragment_forgot_password.xml
+++ b/PinSpot/app/src/main/res/layout/fragment_forgot_password.xml
@@ -39,8 +39,8 @@
                 android:textStyle="bold" />
 
             <EditText
-                style="@style/Button"
                 android:id="@+id/recoveryEmail_edt"
+                style="@style/Button"
                 android:layout_width="match_parent"
                 android:layout_height="50dp"
                 android:layout_marginTop="40dp"
@@ -48,6 +48,7 @@
                 android:drawableLeft="@drawable/ic_baseline_person_outline_24"
                 android:drawablePadding="8dp"
                 android:hint="@string/e_mail_address"
+                android:inputType="textEmailAddress"
                 android:padding="8dp"
                 android:textColor="@color/white"
                 android:textColorHint="@color/white" />
